logs/nams.log
Listing '.'...
Listing './bin'...
Compiling './bin/tester_chirality.py'...
***   File "./bin/tester_chirality.py", line 11
    print chir.can_smi
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/tester_doubleb_e_z.py'...
***   File "./bin/tester_doubleb_e_z.py", line 11
    print stereo.can_smi
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/tester_nams.py'...
***   File "./bin/tester_nams.py", line 19
    print "reading and processing data"
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/NAMS-0.9.2.egg-info'...
Listing './lib/python3.5/site-packages/bin'...
Compiling './lib/python3.5/site-packages/bin/tester_2mols.py'...
***   File "./lib/python3.5/site-packages/bin/tester_2mols.py", line 20
    print "Self similarity 1: %6.2f" % sim11
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bin/tester_chirality.py'...
***   File "./lib/python3.5/site-packages/bin/tester_chirality.py", line 11
    print chir.can_smi
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bin/tester_doubleb_e_z.py'...
***   File "./lib/python3.5/site-packages/bin/tester_doubleb_e_z.py", line 11
    print stereo.can_smi
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bin/tester_nams.py'...
***   File "./lib/python3.5/site-packages/bin/tester_nams.py", line 19
    print "reading and processing data"
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/nams'...
Compiling './lib/python3.5/site-packages/nams/chirality.py'...
***   File "./lib/python3.5/site-packages/nams/chirality.py", line 224
    print duplicate_ligs
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/nams/data'...
Compiling './lib/python3.5/site-packages/nams/heuristic.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (heuristic.py, line 65)
Compiling './lib/python3.5/site-packages/nams/nams.py'...
***   File "./lib/python3.5/site-packages/nams/nams.py", line 444
    print "Warning: Disconnected structures were removed. "
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
